# smartdoc_ai

./: .env.example  .gitignore  README.md  api.py  commit.txt  config.yml  config_loader.py  frontend.py  main.py  pyproject.toml  python_requirements.txt  streamlit_app.py  test.py  test2.py  todo.txt
config/: __init__.py  config.yaml  models.py
db_ops/: db_client.py  db_manager.py
evaluation/: __init__.py  evaluator.py  sample_test_set.json  test_dataset.py
file_ops/: converter.py  generate.py  generate_chunks.py  generate_embeddings.py
ingestion/: __init__.py  chunker.py  ingestion_orchestration.py  loader.py  summarizer.py  vector_store.py
retrieval/: retrieval_orchestration.py  retriever.py
static/: eval.css  eval.html  eval.js  index.html  script.js  style.css
utils/: logger.py
